# job-offer-decoder

./: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
job_offer_decoder.egg-info/: PKG-INFO  SOURCES.txt
openenv_job_offer_decoder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  job_offer_decoder_environment.py  requirements.txt
